# peripherals-imu

./: CMakeLists.txt  README.md  README_en.md
.github/workflows/: code-style.yml
include/: imu.h
src/: imu_core.c  imu_core.h
src/drivers/: drv_i2c_mxc4005.c  drv_spi_icm42670p.c  drv_uart_cmp10a.c
test/: test_imu_i2c.c  test_imu_spi.c  test_imu_uart.c
